creado el componente para graficar

--- a/src/app/distribucion/distribucion.component.html
+++ b/src/app/distribucion/distribucion.component.html
@@ -12,7 +12,7 @@
 				<div class="panel-body">
 					<div class="row">
 						<div class="text-center">
-							{{poisson.name}} 
+							{{poisson.name}}
 							<a href="javascript:void(0)" class="btn btn-primary">Iniciar</a>
 						</div>
 					</div>
@@ -28,21 +28,23 @@
 					<p>
 						Resultados ...
 					</p>
-				</div>	
+				</div>
 			</div>
 		</div>
 		<div class="col-md-5">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 				    <h3 class="panel-title">Grafico</h3>
+            <li><a routerLink="/lineal"></a></li>
+            <!-- probando la grafica-->
 				</div>
 				<div class="panel-body">
 					<p>
 						Grafico ...
 					</p>
-				</div>	
+				</div>
 			</div>
-		</div>		
+		</div>
 	  </div>
 	</div>
 </div>
