agregada probability-distribution

--- a/src/app/distribucion/distribucion.component.html
+++ b/src/app/distribucion/distribucion.component.html
@@ -35,7 +35,8 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 				    <h3 class="panel-title">Grafico</h3>
-            <li><a routerLink="/lineal"></a></li>
+
+            <a class="btn-primary btn-block" routerLink="/lineal">sss</a>
             <!-- probando la grafica-->
 				</div>
 				<div class="panel-body">
