--- a/src/app/linealPoisson/linealPoisson.component.html
+++ b/src/app/linealPoisson/linealPoisson.component.html
@@ -17,7 +17,7 @@
         <th *ngFor="let label of lineChartLabels">{{label}}</th>
       </tr>
       <tr *ngFor="let d of lineChartData">
-        <td *ngFor="let label of lineChartLabels; let j=index"><br>{{d && d.data[j]}}</td>
+        <td *ngFor="let label of lineChartLabels; let j=index">{{d && d.data[j]}}</td>
       </tr>
     </table>
     <button class="btn-primary btn-block" (click)="randomize()">CLICK</button>
