--- a/src/app/lineal/lineal.component.html
+++ b/src/app/lineal/lineal.component.html
@@ -11,15 +11,16 @@
               (chartClick)="chartClicked($event)"></canvas>
     </div>
   </div>
+  
   <div class="col-md-6" style="margin-bottom: 10px">
     <table class="table table-responsive table-condensed">
       <tr>
         <th *ngFor="let label of lineChartLabels">{{label}}</th>
       </tr>
       <tr *ngFor="let d of lineChartData">
-        <td *ngFor="let label of lineChartLabels; let j=index"><br>{{d && d.data[j]}}</td>
+        <td *ngFor="let label of lineChartLabels; let j=index">{{d && d.data[j]}}</td>
       </tr>
     </table>
-    <button class="btn-primary btn-block" (click)="randomize()">CLICK</button>
+    <button class="btn-primary btn-block" (click)="randomize()">calcular</button>
   </div>
 </div>
