--- a/src/app/gamma/gamma.component.html
+++ b/src/app/gamma/gamma.component.html
@@ -11,7 +11,7 @@
 					</div>
 					<div class="panel-body">
 						<div class="row">
-							<form [formGroup]="poisonForm" (ngSubmit)="calcularFuncion()" >
+							<form [formGroup]="gammaForm" (ngSubmit)="calcularFuncion()" >
 								<div class="form-group">
 									<label for="numero">número</label>
 									<input type="number" name="numero" class="form-control" formControlName="numero" step="any" required>
