--- a/src/app/simulacion/simulacion.component.html
+++ b/src/app/simulacion/simulacion.component.html
@@ -8,11 +8,11 @@
 				<div class="btn-group btn-group-justified">
 					<a routerLink="/simulacion/distribucion" class="btn btn-lg btn-primary">Poisson</a>
 					<a routerLink="/simulacion/distribucion" class="btn btn-lg btn-primary">Normal</a>
-					<a routerLink="/simulacion/distribucion" class="btn btn-lg btn-primary">Gamma</a>
+					<a routerLink="/simulacion/gamma" class="btn btn-lg btn-primary">Gamma</a>
 				</div>
 				<div class="btn-group btn-group-justified">
 					<a routerLink="/simulacion/distribucion" class="btn btn-lg btn-primary">Exponencial</a>
-					<a routerLink="/simulacion/distribucion" class="btn btn-lg btn-primary">F</a>
+					<a routerLink="/simulacion/f" class="btn btn-lg btn-primary">F</a>
 					<a routerLink="/simulacion/distribucion" class="btn btn-lg btn-primary">Beta</a>
 				</div>
 				<div class="btn-group btn-group-justified">
