--- a/src/app/distribucion/distribucion.component.html
+++ b/src/app/distribucion/distribucion.component.html
@@ -10,7 +10,7 @@
 						<h3 class="panel-title">Parametros de entrada</h3>
 					</div>
 					<div class="panel-body">
-						<div class="row">
+						<div class="">
 							<form [formGroup]="poisonForm" (ngSubmit)="calcularFuncion()" >
 								<div class="form-group">
 									<label for="numero">número</label>
@@ -20,37 +20,39 @@
 									<label for="media">media</label>
 									<input type="number" name="media" class="form-control" formControlName="media"  step="any" required>
 								</div>
-								<button large type="submit" class="btn btn-default">calcular</button>
+                <div class="text-center">
+                  <button large type="submit" class="btn btn-primary">calcular</button>
+                </div>
+
 							</form>
 						</div>
 					</div>
 				</div>
 			</div>
+      <div class="col-md-5">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Grafico</h3>
+          </div>
+          <div class="panel-body">
+            <div style="display: block;">
+              <canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
+                      [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType">
+              </canvas>
+            </div>
+          </div>
+        </div>
+      </div>
 			<div class="col-md-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h3 class="panel-title">Resultados</h3>
 					</div>
 					<div class="panel-body">
+            <div class="">
 
-						<dl *ngFor="let d of lineChartData">
-							<li *ngFor="let label of lineChartLabels; let j=index">{{ d && d.data[j]}}</li>
-						</dl>
-
-					</div>
-				</div>
-			</div>
-			<div class="col-md-5">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h3 class="panel-title">Grafico</h3>
-					</div>
-					<div class="panel-body">
-						<div style="display: block;">
-							<canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
-							 [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType">
-							</canvas>
-						</div>
+             <textarea class="form-control" rows="15" id="textArea">{{prueba}} </textarea>
+            </div>
 					</div>
 				</div>
 			</div>
