--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="container-fluid">
+  <div class="hidden-xs container-fluid">
     <div class="row">
       <div class="col-md-12">
         <div class="page-header">
@@ -19,7 +19,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Inicio</a>
+      <a class="hidden-xs navbar-brand" href="/">Inicio</a>
+      <a class="visible-xs navbar-brand" href="/">Simulación Distribuciones</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
