--- a/src/app/simulacion/simulacion.component.html
+++ b/src/app/simulacion/simulacion.component.html
@@ -1,21 +1,34 @@
 <div class="container">
-	<div class="col-md-8 col-md-offset-2">
-		<div class="panel panel-primary">
-			<div class="panel-heading">
-		    	<h3 class="panel-title">Distribuciones</h3>
-		  	</div>
-			<div class="panel-body">
-				<div class="btn-group btn-group-justified">
+	<div class="panel panel-primary">
+		<div class="panel-heading">
+			<h3 class="panel-title">Distribuciones</h3>
+		</div>
+		<div class="panel-body">
+			<div class="col-md-8 col-md-offset-2">
+				<div class="hidden-xs">
+					<div class="btn-group btn-group-justified btn-group-raised">
+						<a [routerLink]="['/simulacion/distribucion', 1]" class="btn btn-lg btn-primary">Poisson</a>
+						<a [routerLink]="['/simulacion/distribucion', 2]" class="btn btn-lg btn-primary">Normal</a>
+						<a [routerLink]="['/simulacion/distribucion', 3]" class="btn btn-lg btn-primary">Gamma</a>
+					</div>
+					<div class="btn-group btn-group-justified btn-group-raised">
+						<a [routerLink]="['/simulacion/distribucion', 4]" class="btn btn-lg btn-primary">Exponencial</a>
+						<a [routerLink]="['/simulacion/distribucion', 5]" class="btn btn-lg btn-primary">F</a>
+						<a [routerLink]="['/simulacion/distribucion', 6]" class="btn btn-lg btn-primary">Beta</a>
+					</div>
+					<div class="btn-group btn-group-justified btn-group-raised">
+						<a [routerLink]="['/simulacion/distribucion', 7]" class="btn btn-lg btn-primary">Normal-log</a>
+						<a [routerLink]="['/simulacion/distribucion', 8]" class="btn btn-lg btn-primary">T de Student</a>
+						<a [routerLink]="['/simulacion/distribucion', 9]" class="btn btn-lg btn-primary">Empírica</a>
+					</div>
+				</div>
+				<div class="visible-xs btn-group-vertical btn-group-raised">
 					<a [routerLink]="['/simulacion/distribucion', 1]" class="btn btn-lg btn-primary">Poisson</a>
 					<a [routerLink]="['/simulacion/distribucion', 2]" class="btn btn-lg btn-primary">Normal</a>
 					<a [routerLink]="['/simulacion/distribucion', 3]" class="btn btn-lg btn-primary">Gamma</a>
-				</div>
-				<div class="btn-group btn-group-justified">
 					<a [routerLink]="['/simulacion/distribucion', 4]" class="btn btn-lg btn-primary">Exponencial</a>
 					<a [routerLink]="['/simulacion/distribucion', 5]" class="btn btn-lg btn-primary">F</a>
 					<a [routerLink]="['/simulacion/distribucion', 6]" class="btn btn-lg btn-primary">Beta</a>
-				</div>
-				<div class="btn-group btn-group-justified">
 					<a [routerLink]="['/simulacion/distribucion', 7]" class="btn btn-lg btn-primary">Normal-log</a>
 					<a [routerLink]="['/simulacion/distribucion', 8]" class="btn btn-lg btn-primary">T de Student</a>
 					<a [routerLink]="['/simulacion/distribucion', 9]" class="btn btn-lg btn-primary">Empírica</a>
