correciones bootstrap-material-desing

--- a/src/app/distribucion/distribucion.component.html
+++ b/src/app/distribucion/distribucion.component.html
@@ -5,61 +5,66 @@
 			<h3 class="panel-title">Distribución {{distribucion.titulo}}</h3>
 		</div>
 		<div class="panel-body">
+			<div class="row">	
 			<div class="col-md-3">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h3 class="panel-title">Parametros de entrada</h3>
 					</div>
 					<div class="panel-body">
-						<form [formGroup]="formulario" (ngSubmit)="calcularFuncion()" >
-								<div class="form-group">
-									<label for="numero">Número</label>
-									<input type="number" name="numero" class="form-control" formControlName="numero" step="any" required>
-								</div>					
-							<!--Formulario Poisson-->							
-							<div *ngIf="id == 1">								
-								<div class="form-group">
-									<label for="media">Media</label>
-									<input type="number" name="media" class="form-control" formControlName="media"  step="any" required>
-								</div>								
-							</div>
-							<!--Formulario Normal-->
-							<div *ngIf="id == 2">
-								<div class="form-group">
-									<label for="media">Media</label>
-									<input type="number" name="media" class="form-control" formControlName="media"  step="any" required>
-								</div>
-								<div class="form-group">
-									<label for="sd">Desviación Estandar</label>
-									<input type="number" name="sd" class="form-control" formControlName="sd"  step="any" required>
-								</div>									
-							</div>							
-							<!--Formulario Gamma-->
-							<div *ngIf="id == 3">
-								<div class="form-group">
-									<label for="forma">Forma</label>
-									<input type="number" name="forma" class="form-control" formControlName="forma"  step="any" required>
-								</div>
-								<div class="form-group">
-									<label for="escala">Escala</label>
-									<input type="number" name="escala" class="form-control" formControlName="escala"  step="any" required>
-								</div>	
-							</div>
-							<!--Formulario Exponencial-->
-							<div *ngIf="id == 4">
-								<div class="form-group">
-									<label for="escala">Escala</label>
-									<input type="number" name="escala" class="form-control" formControlName="escala"  step="any" required>
-								</div>	
-							</div>
-							<div *ngIf="id == 5">
+						<div class="row">
+							<div class="col-md-10 col-md-offset-1">
+								<form [formGroup]="formulario" (ngSubmit)="calcularFuncion()" >
+										<div class="form-group">
+											<label for="numero">Número</label>
+											<input type="number" name="numero" class="form-control" formControlName="numero" step="any" required>
+										</div>					
+									<!--Formulario Poisson-->							
+									<div *ngIf="id == 1">								
+										<div class="form-group">
+											<label for="media">Media</label>
+											<input type="number" name="media" class="form-control" formControlName="media"  step="any" required>
+										</div>								
+									</div>
+									<!--Formulario Normal-->
+									<div *ngIf="id == 2">
+										<div class="form-group">
+											<label for="media">Media</label>
+											<input type="number" name="media" class="form-control" formControlName="media"  step="any" required>
+										</div>
+										<div class="form-group">
+											<label for="sd">Desviación Estandar</label>
+											<input type="number" name="sd" class="form-control" formControlName="sd"  step="any" required>
+										</div>									
+									</div>							
+									<!--Formulario Gamma-->
+									<div *ngIf="id == 3">
+										<div class="form-group">
+											<label for="forma">Forma</label>
+											<input type="number" name="forma" class="form-control" formControlName="forma"  step="any" required>
+										</div>
+										<div class="form-group">
+											<label for="escala">Escala</label>
+											<input type="number" name="escala" class="form-control" formControlName="escala"  step="any" required>
+										</div>	
+									</div>
+									<!--Formulario Exponencial-->
+									<div *ngIf="id == 4">
+										<div class="form-group">
+											<label for="escala">Escala</label>
+											<input type="number" name="escala" class="form-control" formControlName="escala"  step="any" required>
+										</div>	
+									</div>
+									<div *ngIf="id == 5">
 
+									</div>
+									<!--falta hasta id 9-->
+									<div class="text-center">
+										<button large type="submit" class="btn btn-primary">calcular</button>
+									</div>
+								</form>
 							</div>
-							<!--falta hasta id 9-->
-						<div class="text-center">
-							<button large type="submit" class="btn btn-primary">calcular</button>
 						</div>
-						</form>
 					</div>
 				</div>
 			</div>
@@ -69,11 +74,15 @@
             <h3 class="panel-title">Grafico</h3>
           </div>
           <div class="panel-body">
-            <div style="display: block;">
-              <canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
-                      [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType">
-              </canvas>
-            </div>
+						<div class="">
+							<div class="">
+								<div style="display: block;">
+									<canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
+													[colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType">
+									</canvas>
+								</div>
+							</div>
+						</div>
           </div>
         </div>
       </div>
@@ -83,12 +92,15 @@
 						<h3 class="panel-title">Resultados</h3>
 					</div>
 					<div class="panel-body">
-            <div class="">
-             <textarea class="form-control" rows="15" id="textArea">{{datos}} </textarea>
+            <div class="row">
+             	<div class="col-md-10 col-md-offset-1">
+								 <textarea class="form-control" rows="15" id="textArea">{{datos}} </textarea>
+							</div>
             </div>
 					</div>
 				</div>
 			</div>
+		</div>	
 		</div>
 	</div>
 </div>
