--- a/src/app/distribucion/distribucion.component.html
+++ b/src/app/distribucion/distribucion.component.html
@@ -110,8 +110,13 @@
 								<div class="">
 									<div class="">
 										<div style="display: block;">
-											<canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions" [colors]="lineChartColors"
-											 [legend]="lineChartLegend" [chartType]="lineChartType">
+											<canvas baseChart
+                              [datasets]="lineChartData"
+                              [labels]="lineChartLabels"
+                              [options]="lineChartOptions"
+                              [colors]="lineChartColors"
+											        [legend]="lineChartLegend"
+                              [chartType]="lineChartType">
 											</canvas>
 										</div>
 									</div>
