--- a/src/app/distribucion/distribucion.component.html
+++ b/src/app/distribucion/distribucion.component.html
@@ -77,7 +77,7 @@
 													<input type="number" name="beta" class="form-control" formControlName="beta" step="any" required>
 												</div>
 												<div class="form-group">
-													<label for="localizacion">localizacionr</label>
+													<label for="localizacion">localizacion</label>
 													<input type="number" name="localizacion" class="form-control" formControlName="localizacion" step="any" required>
 												</div>
 											</div>
@@ -107,25 +107,25 @@
 								<h3 class="panel-title">Grafico</h3>
 							</div>
 							<div class="panel-body">
-								<div class="">
+								<div class="" >
 									<div style="display: block;">
-										<canvas baseChart 
-										[datasets]="lineChartData" 
-										[labels]="lineChartLabels" 
-										[options]="lineChartOptions" 
+										<canvas baseChart
+										[datasets]="lineChartData"
+										[labels]="lineChartLabels"
+										[options]="lineChartOptions"
 										[colors]="lineChartColors"
-										[legend]="lineChartLegend" 
+										[legend]="lineChartLegend"
 										[chartType]="lineChartType">
 										</canvas>
 									</div>
 									<hr SIZE=7 NOSHADE>
 									<div style="display: block;">
-										<canvas baseChart 
-										[datasets]="lineChartData" 
-										[labels]="lineChartLabels" 
-										[options]="lineChartOptions" 
+										<canvas baseChart
+										[datasets]="lineChartData"
+										[labels]="lineChartLabels"
+										[options]="lineChartOptions"
 										[colors]="lineChartColors"
-										[legend]="lineChartLegend" 
+										[legend]="lineChartLegend"
 										[chartType]="barChartType">
 										</canvas>
 									</div>
