se agredo el readme

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,8 +26,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a routerLink="/simulacion">Simulación</a></li>
-        <li><a href="#">Ayuda</a></li>
-        <li><a href="#">Reportes</a></li>
+        <li><a href="https://github.com/Markoz1/Distribuciones-Esdisticas-Angular/blob/master/README.md">ayuda</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
